evaluatetest-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluatetest-service-deployment
  namespace: intelligtest-namespace
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app/component: evaluatetest-service
  template:
    metadata:
      name: evaluatetest-service-pod
      labels:
        app/name: evaluatetest-service-pod
        app/component: evaluatetest-service
    spec:
      containers:
        - name: evaluatetest-service-container
          image: zaragozasebastian/evaluatetest-service-intelligtest:latest
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
          ports:
            - containerPort: 5002
