evaluatetest-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluatetest-ingress
  namespace: intelligtest-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: evts.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evaluatetest-service
                port:
                  number: 5002
